# hoomes

./: .eslintrc  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  blueprint.md  db.py  docker-compose.development.yml  docker-compose.yml  ionic.config.json  nginx.conf  package-lock.json  package.json  pyproject.toml  scraper.py  server.py  utils.py
.github/workflows/: deploy.yml
public/: index.html
scripts/: generateComponent.ts
server/: db.py  geo_data.py  jobs.py  pyproject.toml  scraper.py  server.py  shell.db  test.py  utils.py  worker.py
server/services/: emailer.py  scraper.py
src/: App.tsx  dbConfig.tsx  index.tsx  reportWebVitals.js  router.tsx  setupProxy.js  types.ts  utils.ts
src/components/EmptyState/: EmptyState.module.scss  EmptyState.tsx
src/components/HomeElement/: HomeElement.module.scss  HomeElement.tsx
src/components/HomesList/: HomesList.module.scss  HomesList.tsx
src/components/HomesList/Dropdowns/: Dropdowns.module.scss  PriceFilterDropdown.tsx  SizeFilterDropdown.tsx  SortDropdown.tsx
src/components/Icons/: Expander.tsx  FlatFace.tsx  Location.tsx  M2.tsx  NoData.tsx  PriceMeter.tsx  PriceTag.tsx  Sorting.tsx
src/components/Layout/: Layout.module.scss  Layout.tsx
src/components/Loader/: Loader.module.scss  Loader.tsx
src/components/Request/: Request.module.scss  Request.tsx
src/pages/Listing/: Listing.module.scss  Listing.tsx
