[tool.poetry]
name = "home-scraper"
version = "0.1.0"
description = ""
authors = ["Francesco Meli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
flask = "^3.0.0"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
